changed error text color to align with color scheme. fixed login so it trims all values before sending to back end

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -269,7 +269,7 @@ form textarea {
 }
 form .error {
   font-size: 2rem;
-  color: red;
+  color: #C73529;
   margin: 2rem;
 }
 .buttons {
