--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -34,7 +34,7 @@ form {
 
     .error {
         font-size: 2rem;
-        color:red;
+        color: @error-color;
         margin:2rem;
     }
 }
