--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -6,6 +6,7 @@
 @button-color: @dark-red;
 @button-hover: @christmas-red;
 @divider-color: @dark-brown;
+@error-color: @christmas-red;
 
 
 @nav-bg: @dark-red;
